Fix z-index & smaller logo (#409)
Copies over some improvements from PLM:

- Sets z-index appropriately
- Smaller logo on desktop
- Turns off browser defaults for buttons
- Improves accessibility of header icons

--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -1,8 +1,9 @@
 @use "theme/colors-original";
+@use "theme/zindex";
 
 .about-popup {
   position: absolute;
-  z-index: 1001;
+  z-index: zindex.$about;
   background-color: colors-original.$white;
   border: 1px solid colors-original.$gray-neutral;
   width: 80%;
